--- a/aboutus.html
+++ b/aboutus.html
@@ -219,7 +219,10 @@
                                 </div>
                                 <p><b>Promotions Director*</b></p>
                                 <div class="bio-text">
-                                    <p></p>
+                                    <p>
+                                        Hey! I'm Elle and I am in the Academy of Engineering and Design Technology at BCA. I’m always looking for ways to utilize my engineering background in different ways, which is why I joined iGEM to explore synthetic biology. I also have a lot of other interest including designing, programming, and singing!
+
+                                    </p>
                                 </div>
                             </div>
                             <div class="bio-box">
@@ -234,7 +237,9 @@
                                 </div>
                                 <p><b>Web Master</b></p>
                                 <div class="bio-text">
-                                    <p></p>
+                                    <p>
+                                        Hey guys, I'm Stephen and I'm a CS major in the class of 2025! I joined iGEM to be part of a fun and social community that creates amazing projects that can help people and I fell in love with the genetic aspect of the team! Other than iGEM, I'm also on the volleyball team. I also love to play basketball and listen to music in my free time!
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -270,7 +275,9 @@
                             </div>
                             <p><b>Biology Lead</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Arnav and I’m a sophomore in the Medical Academy at BCA. Having a background in biology, I was drawn to iGEM in order to get a positive experience with research that was done collaboratively, as I would need this for my future career. Outside of iGEM, I enjoy working on my own mathematical projects and hanging out with friends.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -282,7 +289,9 @@
                             </div>
                             <p><b>Web Developer</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Victor and I’m a sophomore in the Medical Academy at BCA. With my background in biology and engineering, I was drawn to iGEM to further my experiences in a collaborative research environment. Outside of iGEM, I enjoy playing the violin and playing volleyball.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -294,7 +303,9 @@
                             </div>
                             <p><b>Outreach Director</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Claire, a sophomore in the medical academy at BCA. I joined iGEM because I thought it was an interesting take on biology and its crossovers with engineering. In my free time, I go on runs, write, and listen to music.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -306,7 +317,9 @@
                             </div>
                             <p><b>Communications Director*</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi everyone! I’m Claire Jiang and I am a part of the class of 2026 in the Academy of Medical Science Technology. I joined iGEM so that I could further pursue my interests in biology, and more specifically, research with a team. As communications directors, we coordinate events to build team unity and further drive our vision in iGEM. Outside of iGEM, I play piano and participate in Model UN conferences. 
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -318,7 +331,9 @@
                             </div>
                             <p><b>Communications Director</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Josephine Serrano and I am a sophomore at BCA, in the Science Academy. I joined iGEM to introduce myself to the world of synthetic biology and expand my research knowledge. In the communications team, we work towards making connections with our school and further connections within the iGEM group. In my free time, I play pottery, read, and run the spectrum club at my school! 
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -333,7 +348,9 @@
                             </div>
                             <p><b>Treasurer</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi, I’m John and I’m a junior in the medical academy at BCA. I joined iGEM because of my passion for biology and to further my research experience. In my free time, I enjoy watching and playing basketball, and spending time with my friends and family.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -345,7 +362,9 @@
                             </div>
                             <p><b>Secretary</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi – I’m Anjali and I’m a sophomore in the science academy at BCA. I joined iGEM because it gives us the unique ability to be able to work collaboratively on a research project. 
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -356,7 +375,9 @@
                                 <h3>Anna Montali</h3>
                             </div>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi I’m Anna and I’m in the class of 2026 medical academy here at BCA. I joined iGEM to improve my biology knowledge and give me more research experience, specifically in a team setting. In my free time, I enjoy stage managing and being part of my school’s tech crew. 
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -368,7 +389,10 @@
                             </div>
                             <p><b>Outreach Director</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Dana and I’m a current sophomore in the music academy at BCA. I joined iGEM because I have always been interested in biology and the application of it in a real-world setting. In my free time, I enjoy baking and playing golf. 
+
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -379,7 +403,9 @@
                                 <h3>Emily Park</h3>
                             </div>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hey, I’m Emily Park and I am currently a sophomore in the academy of culinary and hospitality administration at BCA! I joined iGEM because I thought it would be a good experience to explore the field of synthetic biology. Outside of iGEM, I am involved in other clubs at our school including Compassionate Paws Society Club, Key Club, and SkillsUSA. In my free time, I enjoy listening to music, shopping, and hanging out with friends!
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -391,7 +417,9 @@
                             </div>
                             <p><b>Web Developer</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hey guys, I'm Ethan and I'm a computer science major in the class of 2026! I joined iGEM to be part of a cool team that experiments about synthetic biology. Other than iGEM, I’m also in a climbing team, tennis team, and play the drums! 
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -402,7 +430,9 @@
                                 <h3>Melanie Shim</h3>
                             </div>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Melanie and I’m a sophomore in the visual arts academy. I joined iGEM to collaborate with people from other academies on an innovative research project. Outside of iGEM, I like watching movies and spending time with my friends and family.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -413,7 +443,9 @@
                                 <h3>Tate Kim</h3>
                             </div>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi. I’m Tate and I’m a sophomore in the Culinary Academy at BCA. I joined iGEM because I thought synthetic biology was an interesting field, and I thought doing a research project with a team would be a fulfilling and fun experience. Some of my hobbies include playing tennis, baking treats, playing video games, and listening to music.
+                                </p>
                             </div>
                         </div>
                         <div class="bio-box">
@@ -425,7 +457,9 @@
                             </div>
                             <p><b>Promotions Director*</b></p>
                             <div class="bio-text">
-                                <p></p>
+                                <p>
+                                    Hi! I’m Elizabeth and I’m a sophomore in science at BCA. I joined iGEM to further my interests in biology and be part of a meaningful research project. Outside of iGEM, I enjoy playing sports and baking! 
+                                </p>
                             </div>
                         </div>
                     </div>
