--- a/aboutus.html
+++ b/aboutus.html
@@ -164,7 +164,7 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
-                                        src="person3.jpg"
+                                    src="images/members/Xin.jpg"
                                         alt="Profile Picture"
                                     />
                                 </div>
@@ -188,7 +188,7 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
-                                        src="person3.jpg"
+                                    src="images/members/Logan.jpg"
                                         alt="Profile Picture"
                                     />
                                 </div>
@@ -210,7 +210,7 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
-                                        src="person1.jpg"
+                                        src="images/members/Danielle.jpg"
                                         alt="Profile Picture"
                                     />
                                 </div>
@@ -324,7 +324,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img src="images/members/Josie.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Josephine Serrano</h3>
@@ -410,7 +410,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person1.jpg" alt="Profile Picture" />
+                                <img src="images/members/Ethan.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Ethan Cha</h3>
@@ -424,7 +424,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person2.jpg" alt="Profile Picture" />
+                                <img src="images/members/Melanie.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Melanie Shim</h3>
