fixed image sizing

--- a/aboutus.html
+++ b/aboutus.html
@@ -164,8 +164,10 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
+                                    class="images"
                                     src="images/members/Xin.jpg"
-                                        alt="Profile Picture"
+                                    width="250"
+                                    alt="Profile Picture"
                                     />
                                 </div>
                                 <div class="name">
@@ -188,6 +190,7 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
+                                    class="images"
                                     src="images/members/Logan.jpg"
                                         alt="Profile Picture"
                                     />
@@ -210,7 +213,9 @@
                             <div class="bio-box">
                                 <div class="profile-picture">
                                     <img
+                                    class="images"
                                         src="images/members/Danielle.jpg"
+                                        width="250"
                                         alt="Profile Picture"
                                     />
                                 </div>
@@ -268,7 +273,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person1.jpg" alt="Profile Picture" />
+                                <img class="images" src="images/members/Adepu.webp" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Arnav Adepu</h3>
@@ -296,7 +301,8 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person2.jpg" alt="Profile Picture" />
+                                <img 
+                                class="images" src="images/members/Claire.jpeg"  alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Claire Sim</h3>
@@ -324,7 +330,11 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="images/members/Josie.jpg" alt="Profile Picture" />
+                                <img 
+                                class="images"
+                                src="images/members/Josie.jpg" 
+                                width="250"
+                                alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Josephine Serrano</h3>
@@ -369,7 +379,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img class="images" src="images/members/Anna.jpeg"  alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Anna Montali</h3>
@@ -382,7 +392,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img class="images"  src="images/members/Dana.jpeg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Dana Chung</h3>
@@ -397,7 +407,8 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img class="images"
+                                src="images/members/Emily.jpeg"  alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Emily Park</h3>
@@ -410,7 +421,10 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="images/members/Ethan.jpg" alt="Profile Picture" />
+                                <img class="images"
+                                src="images/members/Ethan.jpg" 
+                                width="250"
+                                alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Ethan Cha</h3>
@@ -424,7 +438,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="images/members/Melanie.jpg" alt="Profile Picture" />
+                                <img class="images" src="images/members/Melanie.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Melanie Shim</h3>
@@ -437,7 +451,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img class="images" src="person3.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Tate Kim</h3>
@@ -450,7 +464,7 @@
                         </div>
                         <div class="bio-box">
                             <div class="profile-picture">
-                                <img src="person3.jpg" alt="Profile Picture" />
+                                <img class="images" src="person3.jpg" alt="Profile Picture" />
                             </div>
                             <div class="name">
                                 <h3>Elizabeth Ki</h3>
