updated profile pictures

--- a/aboutus.html
+++ b/aboutus.html
@@ -96,8 +96,9 @@
                         <div class="founder">
                             <img
                                 class="images"
-                                src="images/members/MuhammadE.jpg"
+                                src="images/members/MuhammadE.png"
                                 width="500"
+                                height="300"
                                 alt="Muhammad E"
                             />
                         </div>
@@ -106,7 +107,8 @@
                                 class="images"
                                 src="images/members/NickY.jpeg"
                                 width="500"
-                                alt="Muhammad E"
+                                height="300"
+                                alt="Nick Y"
                             />
                         </div>
                     </div>
@@ -139,10 +141,17 @@
                                 </div>
                             </div>
                             <div class="bio-box">
-                                <div class="profile-picture">
+                                <div>
                                     <img
-                                        src="person2.jpg"
+                                        src="images/members/Raunak.png"
                                         alt="Profile Picture"
+                                        style="
+                                            width: 150px;
+                                            height: 180px;
+                                            border-radius: 50%;
+                                            display: block;
+                                            margin: 0 auto;
+                                        "
                                     />
                                 </div>
                                 <div class="name">
@@ -151,7 +160,7 @@
                                 <p><b>Engineering Lead & Web Developer</b></p>
                                 <div class="bio-text">
                                     <p>
-                                        Hello, I am Raunak Singh, a sophomore in
+                                        Hello, I am Raunak Singh, a junior in
                                         the Engineering Academy. My passion for
                                         research, programming, and science
                                         drives me to advance synthetic biology
@@ -165,7 +174,7 @@
                                 <div class="profile-picture">
                                     <img
                                         class="images"
-                                        src="images/members/Xin.jpg"
+                                        src="images/members/Xinyang.jpg"
                                         width="250"
                                         alt="Profile Picture"
                                     />
