--- a/sponsors.html
+++ b/sponsors.html
@@ -1,74 +1,91 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="client-nojs">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
-    />
-    <title>Bergen County Academies - iGEM</title>
-    <link rel="stylesheet" href="sponsors.css" />
-    <link rel="stylesheet" href="project.css" />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/bootstrap?action=raw&amp;ctype=text/css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/nav?action=raw&amp;ctype=text/css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://2015.igem.org/Team:OUC-China/css/index?action=raw&amp;ctype=text/css"
+        />
+        <title>Bergen County Academies - iGEM</title>
+        <link rel="stylesheet" href="sponsors.css" />
+        <link rel="stylesheet" href="project.css" />
+    </head>
 
-  <body>
-    <br />
-    <header class="header">
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <span class="menu"> Menu</span>
-          <div class="banner-top">
-            <ul class="nav banner-nav">
-              <li class="dropdown1">
-                <a class="down-scroll" href="index.html">HOME</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="project.html">PROJECT</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="sponsors.html">SPONSORS</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="aboutus.html">ABOUT US</a>
-              </li>
-              <li class="dropdown1">
-                <a class="down-scroll" href="contact.html">CONTACT</a>
-              </li>
-            </ul>
+    <body>
+        <br />
+        <header class="header">
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <span class="menu"> Menu</span>
+                    <div class="banner-top">
+                        <ul class="nav banner-nav">
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="index.html"
+                                    >HOME</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="project.html"
+                                    >PROJECT</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="sponsors.html"
+                                    >SPONSORS</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="aboutus.html"
+                                    >ABOUT US</a
+                                >
+                            </li>
+                            <li class="dropdown1">
+                                <a class="down-scroll" href="contact.html"
+                                    >CONTACT</a
+                                >
+                            </li>
+                        </ul>
 
-            <script>
-              $("span.menu").click(function () {
-                $(" ul.nav").slideToggle("slow", function () {});
-              });
-            </script>
-          </div>
-          <div class="clearfix"></div>
+                        <script>
+                            $("span.menu").click(function () {
+                                $(" ul.nav").slideToggle(
+                                    "slow",
+                                    function () {}
+                                );
+                            });
+                        </script>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
+        </header>
+        <div class="banner-container">
+            <div class="banner-content">
+                <h2>Sponsors</h2>
+            </div>
         </div>
-        <!-- /.container-fluid -->
-      </nav>
-    </header>
-    <div class="banner-container">
-      <div class="banner-content">
-        <h2>Sponsors</h2>
-      </div>
-    </div>
-    <div class="container-fluid how-work">
-      <div class="container">
-        <div class="work-header">
-          <h2 class="text-uppercase">
-            <span>Sponsors</span>
-          </h2>
-          <p>Thank you to our sponsors!</p>
+        <div class="container-fluid how-work">
+            <div class="container">
+                <div class="work-header">
+                    <h2 class="text-uppercase">
+                        <span>Sponsors</span>
+                    </h2>
+                    <p>Thank you to our sponsors!</p>
+                </div>
+                <img
+                    src="images/princeton_review_logo.jpeg"
+                    class="princeton-review-logo work-header container"
+                />
+            </div>
         </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
